# InetMonitor

./: .gitignore  CMakeLists.txt  README.md
docs/: BUILD_AND_TEST.md  implementation_plan.md  task.md
src/: main.cpp  test_headers.cpp
src/analyzer/: ConclusionGenerator.cpp  ConclusionGenerator.h  EventLogReader.cpp  EventLogReader.h  LogCorrelator.cpp  LogCorrelator.h  PeakDetector.cpp  PeakDetector.h
src/db/: Database.cpp  Database.h
src/monitor/: AppMonitor.cpp  AppMonitor.h  DnsResolver.cpp  DnsResolver.h  ETWController.cpp  ETWController.h  ETWHeaders.h  GeoIpResolver.cpp  GeoIpResolver.h  ProcessTracker.cpp  ProcessTracker.h  TraceParser.cpp  TraceParser.h
src/utils/: Logger.h
